crates/strider-analyze/tests/snapshots/v3__x86_kernel__stack__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x401280:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x401100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v16" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "18" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "12" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x401130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "18" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v22" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v22" [color="#888888", style=dashed];
  "v22" -> "18" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "18" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x401290:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "18" -> "v28" [color="#888888", style=dashed];
  "v28" -> "24" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "30" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "24" -> "30" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v33" [color="#888888", style=dashed];
  "v33" -> "30" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v34" [color="#888888", style=dashed];
  "v34" -> "30" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v35" [color="#888888", style=dashed];
  "v35" -> "30" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "32" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v37" [color="#888888", style=dashed];
  "v37" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "24" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "18" -> "v42" [color="#888888", style=dashed];
  "v42" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "18" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "43" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x40131e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "18" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v48" [color="#888888", style=dashed];
  "v48" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "12" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "49" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x401311:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "12" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "56" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x401304:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "7" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "61" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x4012f3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "64" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "69" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x4012d6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "72" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
